Unit_2/Lec4_Assignments/Homework1/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:45:24 **** Rebuild of configuration Debug for project 1-Matrix Sum ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:13:8: error: redeclaration of 'm_a' with no linkage
  float m_a [2][2];
        ^~~
..\main.c:12:8: note: previous declaration of 'm_a' was here
  float m_a [2][2];
        ^~~
..\main.c:20:3: warning: implicit declaration of function 'ffflush' [-Wimplicit-function-declaration]
   ffflush(stdout);
   ^~~~~~~
..\main.c:16:6: warning: unused variable 'j' [-Wunused-variable]
  int j =0;
      ^
..\main.c:13:8: warning: unused variable 'm_a' [-Wunused-variable]
  float m_a [2][2];
        ^~~
17:46:34 **** Incremental Build of configuration Debug for project 1-Matrix Sum ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:13:8: warning: unused variable 'm_b' [-Wunused-variable]
  float m_b [2][2];
        ^~~
gcc -ansi -std=c89 -o "1-Matrix Sum.exe" main.o 
Info: Nothing to build for 1-Matrix Sum
Info: Nothing to build for 1-Matrix Sum
17:50:29 **** Incremental Build of configuration Debug for project 1-Matrix Sum ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:13:8: warning: unused variable 'm_b' [-Wunused-variable]
  float m_b [2][2];
        ^~~
gcc -ansi -std=c89 -o "1-Matrix Sum.exe" main.o 
17:52:11 **** Incremental Build of configuration Debug for project 1-Matrix Sum ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o "1-Matrix Sum.exe" main.o 
17:57:44 **** Incremental Build of configuration Debug for project 1-Matrix Sum ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o "1-Matrix Sum.exe" main.o 
17:59:43 **** Incremental Build of configuration Debug for project 1-Matrix Sum ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o "1-Matrix Sum.exe" main.o 
18:00:23 **** Incremental Build of configuration Debug for project 1-Matrix Sum ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o "1-Matrix Sum.exe" main.o 
Info: Nothing to build for 1-Matrix Sum
18:54:02 **** Rebuild of configuration Debug for project 2-Calculate Average ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o "2-Calculate Average.exe" main.o 
Info: Nothing to build for 2-Calculate Average
18:56:01 **** Incremental Build of configuration Debug for project 2-Calculate Average ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o "2-Calculate Average.exe" main.o 
Info: Nothing to build for 2-Calculate Average
19:58:33 **** Incremental Build of configuration Debug for project 1-Matrix Sum ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o "1-Matrix Sum.exe" main.o 
Info: Nothing to build for 2-Calculate Average
19:58:33 **** Rebuild of configuration Debug for project 3-Transpose Matrix ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:18:10: warning: format '%f' expects argument of type 'float *', but argument 2 has type 'int *' [-Wformat=]
  scanf("%f%f",&row,&col);
          ^
..\main.c:18:12: warning: format '%f' expects argument of type 'float *', but argument 3 has type 'int *' [-Wformat=]
  scanf("%f%f",&row,&col);
            ^
gcc -ansi -std=c89 -o "3-Transpose Matrix.exe" main.o 
Info: Nothing to build for 1-Matrix Sum
Info: Nothing to build for 2-Calculate Average
19:58:55 **** Incremental Build of configuration Debug for project 3-Transpose Matrix ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o "3-Transpose Matrix.exe" main.o 
Info: Nothing to build for 3-Transpose Matrix
Info: Nothing to build for 1-Matrix Sum
Info: Nothing to build for 2-Calculate Average
20:03:23 **** Incremental Build of configuration Debug for project 3-Transpose Matrix ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o "3-Transpose Matrix.exe" main.o 
Info: Nothing to build for 3-Transpose Matrix
20:05:42 **** Incremental Build of configuration Debug for project 3-Transpose Matrix ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o "3-Transpose Matrix.exe" main.o 
20:06:20 **** Incremental Build of configuration Debug for project 3-Transpose Matrix ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o "3-Transpose Matrix.exe" main.o 
Info: Nothing to build for 3-Transpose Matrix
Info: Nothing to build for 1-Matrix Sum
Info: Nothing to build for 2-Calculate Average
Info: Nothing to build for 3-Transpose Matrix
20:35:17 **** Rebuild of configuration Debug for project 4-Inseret an Element ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o "4-Inseret an Element.exe" main.o 
Info: Nothing to build for 4-Inseret an Element
Info: Nothing to build for 1-Matrix Sum
Info: Nothing to build for 2-Calculate Average
Info: Nothing to build for 3-Transpose Matrix
Info: Nothing to build for 4-Inseret an Element
20:56:46 **** Rebuild of configuration Debug for project 5-Find an Element ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o "5-Find an Element.exe" main.o 
Info: Nothing to build for 5-Find an Element
Info: Nothing to build for 5-Find an Element
